--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <body>
     <div id="app"></div>
     <script type="text/javascript" src="bundle.js"></script>
+      <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
